# margot

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-rust  README.md  script.py  script.sh
.github/actions/build-and-push/: action.yml
.github/actions/deploy/: action.yml
.github/workflows/: dev.yml  live.yml  stage.yml
operations/: deploy-dev.hcl  deploy-live.hcl  deploy-stage.hcl
src/: commands.rs  main.rs  opts.rs
src/commands/: config.rs  count.rs  err.rs  find.rs  like.rs  sybil.rs  sybilhunter.rs  test.rs  util.rs
testdata/: fps.txt  policy_accept.txt  policy_accept_commas.txt  policy_invalid.txt  policy_reject.txt
