[package]
name = "margot"
version = "0.1.0"
authors = ["David Goulet <dgoulet@ev0ke.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio" ]
tokio = [ "tor-rtcompat/tokio" ]

[dependencies]
config = { version="0.11.0", default-features=false }
hex = { version = "0.4" }
structopt = { version = "0.3" }
thiserror = "1.0.24"
simple-logging = "2.0.2"
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
prettytable-rs = "0.8"
ipnetwork = "0.17"
multimap = "0.8"
rand = "0.8"
levenshtein = "1.0.5"
tokio-crate = { package = "tokio", version = "1.7", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
] }

# Last versions as of 2022-10-06, increment them as they change.
# Arti 1.0.1: https://gitlab.torproject.org/tpo/core/arti/-/tags/arti-v1.0.1
arti-client = {version = "0.7", features = ["experimental-api"]}
tor-rtcompat = {version = "0.7", features = ["tokio"]}
tor-chanmgr = {version = "0.7"}
tor-circmgr = {version = "0.6", features = ["experimental-api"] }
tor-config = {version = "0.6" }
tor-dirmgr = {version = "0.8" }
tor-netdir = {version = "0.6", features = ["experimental-api"] }
tor-netdoc = {version = "0.5" }
tor-proto = {version = "0.7" }
