[package]
name = "margot"
version = "0.1.0"
authors = ["David Goulet <dgoulet@ev0ke.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tokio" ]
tokio = [ "tor-rtcompat/tokio" ]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = { version="0.11", default-features=false }
futures = "0.3"
hex = { version = "0.4" }
ipnetwork = "0.17"
levenshtein = "1.0"
multimap = "0.8"
prettytable-rs = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
structopt = { version = "0.3" }
thiserror = "1.0"
tokio-crate = { package = "tokio", version = "1.7", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "time",
] }

# Last versions, increment them as they change:
# https://gitlab.torproject.org/tpo/core/arti/-/tags
arti-client = {version = "0.9", features = ["experimental-api"]}
tor-chanmgr = {version = "0.9"}
tor-circmgr = {version = "0.9", features = ["experimental-api"] }
tor-config = {version = "0.9" }
tor-dirmgr = {version = "0.10" }
tor-linkspec = {version = "0.8"}
tor-llcrypto = {version = "0.5"}
tor-netdir = {version = "0.9", features = ["experimental-api"] }
tor-netdoc = {version = "0.8" }
tor-proto = {version = "0.11" }
tor-rtcompat = {version = "0.9", features = ["tokio"]}
